@@ -6,7 +6,7 @@
     <parent>
         <groupId>org.elasticsearch</groupId>
         <artifactId>elasticsearch-parent</artifactId>
-        <version>2.0.0-SNAPSHOT</version>
+        <version>2.0.0-beta1-SNAPSHOT</version>
     </parent>
 
     <groupId>org.elasticsearch</groupId>
@@ -299,39 +299,6 @@
         </testResources>
 
         <plugins>
-          <plugin>
-            <groupId>org.codehaus.mojo</groupId>
-            <artifactId>exec-maven-plugin</artifactId>
-            <version>1.4.0</version>
-            <executions>
-              <execution>
-                <goals>
-                  <goal>exec</goal>
-                </goals>
-              </execution>
-            </executions>
-            <configuration>
-              <executable>${jvm.executable}</executable>
-              <arguments>
-                <argument>-Des.security.manager.enabled=false</argument>
-                <argument>-classpath</argument>
-                <classpath/>
-                <argument>org.elasticsearch.bootstrap.Bootstrap</argument>
-                <argument>-Xms256m</argument>
-                <argument>-Xmx1g</argument>
-                <argument>-Djava.awt.headless=true</argument>
-                <argument>-XX:+UseParNewGC</argument>
-                <argument>-XX:+UseConcMarkSweepGC</argument>
-                <argument>-XX:CMSInitiatingOccupancyFraction=75</argument>
-                <argument>-XX:+UseCMSInitiatingOccupancyOnly</argument>
-                <argument>-XX:+HeapDumpOnOutOfMemoryError</argument>
-                <argument>-XX:+DisableExplicitGC</argument>
-                <argument>-Dfile.encoding=UTF-8</argument>
-                <argument>-Djna.nosys=true</argument>
-                <argument>-Delasticsearch</argument>
-              </arguments>
-            </configuration>
-          </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-source-plugin</artifactId>
@@ -392,6 +359,7 @@
                             <include>com.tdunning:t-digest</include>
                             <include>org.apache.commons:commons-lang3</include>
                             <include>commons-cli:commons-cli</include>
+                            <include>com.twitter:jsr166e</include>
                         </includes>
                     </artifactSet>
                     <transformers>
@@ -1024,11 +992,24 @@
                     </execution>
                 </executions>
             </plugin>
-            <!-- integration tests -->
+            <!-- execution and integration tests -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-antrun-plugin</artifactId>
                 <executions>
+                    <!-- start up elasticsearch in foreground -->
+                    <execution>
+                        <id>execute</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>run</goal>
+                        </goals>
+                        <configuration>
+                            <target if="${run}">
+                                <ant antfile="${elasticsearch.integ.antfile}" target="start-foreground"/>
+                            </target>
+                        </configuration>
+                    </execution>
                     <!-- start up external cluster -->
                     <execution>
                         <id>integ-setup</id>
@@ -1038,8 +1019,7 @@
                         </goals>
                         <configuration>
                             <target>
-                                <ant antfile="${elasticsearch.tools.directory}/ant/integration-tests.xml"
-                                     target="start-external-cluster"/>
+                                <ant antfile="${elasticsearch.integ.antfile}" target="start-external-cluster"/>
                             </target>
                         </configuration>
                     </execution>
@@ -1052,21 +1032,13 @@
                         </goals>
                         <configuration>
                             <target>
-                                <ant antfile="${elasticsearch.tools.directory}/ant/integration-tests.xml"
-                                     target="stop-external-cluster"/>
+                                <ant antfile="${elasticsearch.integ.antfile}" target="stop-external-cluster"/>
+                                <!-- TODO: remove this and the xslt when junit4 is fixed -->
+                                <ant antfile="${elasticsearch.integ.antfile}" target="fixup-failsafe-summary"/>
                             </target>
                         </configuration>
                     </execution>
                 </executions>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-failsafe-plugin</artifactId>
-                <configuration>
-                    <systemPropertyVariables>
-                        <tests.cluster>127.0.0.1:9300</tests.cluster>
-                    </systemPropertyVariables>
-                </configuration>
             </plugin>
         </plugins>
       <pluginManagement>
@@ -1110,6 +1082,31 @@
                 </property>
             </activation>
             <!-- not including license-maven-plugin is sufficent to expose default license -->
+        </profile>
+        <profile>
+            <id>release</id> <!-- named after the parents release profile to be activated -->
+            <activation>
+                <property>
+                    <name>package.rpm</name>
+                    <value>true</value>
+                </property>
+            </activation>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.codehaus.mojo</groupId>
+                        <artifactId>rpm-maven-plugin</artifactId>
+                        <executions>
+                            <execution>
+                                <id>attach-rpm</id>
+                                <goals>
+                                    <goal>attached-rpm</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
         </profile>
         <profile>
             <id>sign-rpm</id>
